@@ -1,3 +1,7 @@
+2017-10-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Improved handling of storage pid, resolves #30
+
 2017-08-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added possibility to register custom process steps, resolves #23
